Fix subscrube button alignment issue

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,10 @@ footer {
   overflow: auto;
 }
 
+.subscribe {
+  margin: 0 auto;
+}
+
 
 footer {
   background-color: white;
